fix(client): the video player doesn't stretch videos anymore, and there is no more cut at the bottom

--- a/src/components/BottomNavbar/index.css
+++ b/src/components/BottomNavbar/index.css
@@ -1,5 +1,5 @@
 .bottom-navbar {
-  position: sticky;
+  position: fixed;
   background-color: #161616;
   bottom: 0;
   width: 100%;
