--- a/src/components/VideoCard/index.css
+++ b/src/components/VideoCard/index.css
@@ -50,7 +50,7 @@
 }
 
 .video::before {
-  content: '';
+  content: "";
   display: block;
   box-shadow: 0 -33px 48px rgba(0, 0, 0, 0.5) inset;
   width: 100%;
@@ -67,9 +67,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 56px);
 }
 
 .bottom-controls {
